--- a/login.css
+++ b/login.css
@@ -10,13 +10,17 @@ body {
   color: #fff;
   display: flex;
   padding: 20px;
+  box-sizing: border-box;
+ justify-content: center;
+ 
 }
 
 .divpai {
   background-color: #1e1e1e;
   padding: 25px;
   border-radius: 10px;
-  width: 100%;
+  width: 500px;
+  
 }
 
 h1 {
@@ -53,9 +57,13 @@ input {
   text-align: left;
   background-color: #2a2a2a;
   color: #fff;
+  
 }
 
-
+.botao a{
+  text-decoration: none;
+  color: #fff;
+}
 
 .continuar {
   background-color: #0078f2;
