--- a/login.css
+++ b/login.css
@@ -20,7 +20,7 @@ body {
   padding: 25px;
   border-radius: 10px;
   width: 500px;
-  
+  box-shadow:  0px 0px 1px 3px #161616c7;
 }
 
 h1 {
@@ -47,18 +47,26 @@ input {
   font-size: 14px;
 }
 
+
 .botao {
   width: 100%;
   padding: 12px;
   border: none;
-  border-radius: 6px;
+  border-radius: 20px;
   font-size: 15px;
   margin-bottom: 10px;
-  text-align: left;
+  text-align: center;
   background-color: #2a2a2a;
   color: #fff;
-  
+  cursor: pointer;
+  transition: all 0.2s ease;
 }
+
+.botao:hover{
+  background-color: #424242;
+  transform: translateY(-2px)
+}
+
 
 .botao a{
   text-decoration: none;
