--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
     background-color: #121212;
     color: #fff; 
 }
+.nav{
+    
+}
 .imagem_principal{
     background-color: #121212;
     border: none;
