--- a/login.css
+++ b/login.css
@@ -15,6 +15,15 @@ body {
  
 }
 
+#voltar{
+  text-decoration: none;
+  color: #fff;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  position: absolute;
+  right: 100px;
+  top: 40px;
+}
+
 .divpai {
   background-color: #1e1e1e;
   padding: 25px;
