--- a/login.css
+++ b/login.css
@@ -24,12 +24,31 @@ body {
   top: 40px;
 }
 
+
+.login{
+  border: 1px solid #424242;
+  border-radius: 10px;
+  
+}
+
+a{
+  text-decoration: none;
+}
+
+a:hover{
+  text-decoration: underline;
+}
+
+#voltar:hover{
+  text-decoration: underline;
+}
+
 .divpai {
   background-color: #1e1e1e;
   padding: 25px;
   border-radius: 10px;
   width: 500px;
-  box-shadow:  0px 0px 1px 3px #161616c7;
+  box-shadow:  0px 0px 1px 3px #313131c7;
 }
 
 h1 {
@@ -48,32 +67,53 @@ p {
 }
 
 input {
-  width: 100%;
+  width: 400px;
   padding: 12px;
   border-radius: 6px;
   border: none;
   margin-bottom: 12px;
   font-size: 14px;
+  background-color: #2a2a2a;
+  border: 1px solid #424242;
+  margin-left: 24px;
+}
+
+
+img{
+  width: 35px;
+  position: absolute;
+  left: 481px;
+  margin-top:-9px ;
+  border-radius: 100%;
+}
+
+#criar{
+  color: #0078f2;
+}
+
+p{
+  text-align: center;
+  margin-top: 10px;
 }
 
 
 .botao {
-  width: 100%;
+  width: 400px;
   padding: 12px;
   border: none;
   border-radius: 20px;
   font-size: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   text-align: center;
   background-color: #2a2a2a;
   color: #fff;
   cursor: pointer;
-  transition: all 0.2s ease;
+  transition: all 0.2s ease;  
+  margin-left: 24px;
 }
 
 .botao:hover{
   background-color: #424242;
-  transform: translateY(-2px)
 }
 
 
@@ -87,7 +127,10 @@ input {
   text-align: center;
 }
 
-
+#continuar{
+  background-color: #0078f2;
+  border-radius: 10px;
+}
 
 .primeira_vez {
   font-size: 13px;
