--- a/Suporte.css
+++ b/Suporte.css
@@ -6,7 +6,7 @@
 
  body {
    margin: 0;
-   background: linear-gradient(rgb(6, 4, 49), #152749);
+   background: linear-gradient(rgb(0, 0, 0), #152749);
    min-height: 100vh;
    display: flex;
    align-items: flex-start;
@@ -87,7 +87,7 @@
    box-shadow: inset -2px 6px 12px 3px #23395e;
    background-color: transparent;
    border-radius: 17px;
-   border: 1px solid #1f2f47;
+   border: 1px solid #0164f8;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
@@ -97,7 +97,7 @@
    margin-right: 15px;
    margin-bottom: 20px;
    text-decoration: none;
-   text-shadow: 0px 0px 0px #263666;
+   text-shadow: 0px 0px 0px #213877;
  }
 
  button:hover {
@@ -106,8 +106,7 @@
  }
 
  .Respostas button:active {
-   background-color: rgb(0, 0, 0);
-   color: white;
+
  }
  .search {
   display: flex;
@@ -136,12 +135,13 @@
   color: #fff;
 }
 aside.sidebar {
-  background-color: #3b7bfc69;
+  background-color: #001847;
   padding: 18px;
   border-radius: 10px;
   min-height: 320px;
   top: 24px;
   box-shadow: 0 6px 30px rgba(2, 6, 23, 0.6);
+  border-color: #ffffff;
 }
 nav a {
   display: block;
@@ -153,8 +153,8 @@ nav a {
   font-size: 14px;
 }
 nav a.active {
-  background: linear-gradient( #ffffff5d);
-  color: #061129;
+  background: linear-gradient( #ffffffda);
+  color: #000308;
   font-weight: 700;
 }
 nav .nav-group {
