--- a/style.css
+++ b/style.css
@@ -28,14 +28,10 @@ body {
     padding: 14px 18px;
 }
 
-.brand {
-    background: #fff;
-    color: #0f1113;
-    font-weight: 700;
-    padding: 6px 10px;
-    border-radius: 4px;
-    letter-spacing: 1px;
+#epic{
+    height: 50px;
 }
+
 
 .main-nav a {
     color: #dbe8ef;
@@ -64,9 +60,19 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.04);
 }
 
+
+#entrar{
+    background-color: #0ea5a3;
+    color: #081018;
+    height: 30px;
+    text-decoration: none;
+    padding-bottom: 30px;   
+}
+
 .btn.primary {
     background: #0ea5a3;
     color: #081018;
+    height: 39px;
 }
 
 /* Container */
