--- a/login.css
+++ b/login.css
@@ -82,7 +82,7 @@ input {
 img{
   width: 35px;
   position: absolute;
-  left: 471px;
+  left: 73vh;
   margin-top:-9px ;
   border-radius: 100%;
 }
