--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ section{
     padding-bottom: 0px;
     height: 250px;
     width: 220px;
-    
+    border-radius: 20px;
 }
 .tipojogo_descubra{
     text-align: center;
